--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mobx-state-tree": "^3.0.0",
     "prettier": "^1.13.7",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "typeface-roboto": "^0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
